--- a/Preguntas_Respuestas/Views/Home/myquestions.cshtml
+++ b/Preguntas_Respuestas/Views/Home/myquestions.cshtml
@@ -22,7 +22,7 @@
 </div>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="modal">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-lg">
         <div id="modal" class="modal-content">
             <div class="text-center my-2" id="pregunta">
 
