cambio de modal

--- a/Preguntas_Respuestas/Views/Home/Inicio.cshtml
+++ b/Preguntas_Respuestas/Views/Home/Inicio.cshtml
@@ -18,14 +18,14 @@
 </div>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="modal">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-lg">
         <div id="modalMantenimiento" class="modal-content">
             <div class="mx-auto my-2">
                 <h4>Insertar nueva pregunta!</h4>
             </div>
-            <div class="mx-auto">
+            <div class="mx-auto col-md-4">
                 <form>
-                    <input type="text" id="dato" placeholder="Inserte su pregunta" class="form-control input-lg my-1" />
+                    <input type="text" id="dato" placeholder="Inserte su pregunta" class="form-control input-lg my-4" />
                 </form>
             </div>
             <div class=" row my-3 mx-auto">
